# flow-matrx

./: .env.example  .gitignore  CLAUDE.md  MODULE_README.md  Makefile  Matrx-Flow-Technical-Specifications.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.arman/: PROJECT-STATUS.md  arman-communication.md  from-arman.md  next-priorities.md
.arman/open/tech-stack/: CURRENT-STATUS.md  INITIAL-PLAN.md
.arman/team/: ROSTER.md  START-HERE.md
.arman/team/EXPERTS/: api-contract.md  async-task-queue.md  docker-infrastructure.md  fastapi-asgi.md  monaco-editor.md  overview.md  postgresql.md  pydantic-validation.md  python-runtime.md  react.md  realtime-integration.md  redis.md  security.md  supabase.md  tailwind-css.md  tanstack-query.md  template-serialization.md  typescript.md  vite-build.md  workflow-engine-owner.md  xyflow-canvas.md  zustand.md
.arman/team/PMS/: PM-01-Database-Infrastructure.md  PM-02-Execution-Engine.md  PM-03-Step-Handlers.md  PM-04-API-Layer.md  (+2 more)
.claude/: launch.json
backend/: .env.example  MODULE_README.md  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/app/: MODULE_README.md  bootstrap.py  config.py  dependencies.py  main.py
backend/app/api/: catalog.py  router.py  runs.py  triggers.py  workflows.py  ws.py
backend/app/auth/: jwt.py
backend/app/db/: MODULE_README.md  __init__.py  connection.py  fields.py  generate.py  jsonb_types.py  models.py  schemas.py
backend/app/db/custom/: __init__.py  core.py  user.py
backend/app/db/helpers/: auto_config.py
backend/app/db/managers/: org.py  org_member.py  resource_share.py  user_profile.py  wf_run.py  wf_run_event.py  wf_step_run.py  wf_workflow.py
backend/app/db/models/: __init__.py  run.py  run_event.py  step_run.py  workflow.py
backend/app/db/queries/: runs.py  step_runs.py  workflows.py
backend/app/engine/: exceptions.py  executor.py  function_registry.py  graph.py  safe_eval.py  templates.py
backend/app/events/: bus.py  types.py
backend/app/steps/: base.py  catalog.py  condition.py  database_query.py  delay.py  for_each.py  function_call.py  http_request.py  inline_code.py  llm_call.py  registry.py  send_email.py  transform.py  wait_for_approval.py  wait_for_event.py  webhook.py
backend/app/temp/code_generator/: initialSchemas.json  schemaAnalysis.json
backend/app/types/: schemas.py
backend/app/validation/: __init__.py  workflow.py
backend/db/: __init__.py  fields.py  jsonb_types.py  matrx_orm.yaml  models.py  run_migrations.py
backend/db/helpers/: auto_config.py
backend/db/managers/: __init__.py  org.py  org_member.py  resource_share.py  user_profile.py  wf_run.py  wf_run_event.py  wf_step_run.py  wf_workflow.py
backend/scripts/: run_workflow.py  seed_workflow.py
backend/temp/code_generator/: fullRelationships.json  schemaAnalysis.json
backend/tests/: conftest.py  test_graph.py  test_safe_eval.py  test_steps.py  test_templates.py  test_validation.py
backend/tests/integration/: test_full_pipeline.py
backend/tests/test_engine/: conftest.py  test_executor.py  test_function_registry.py  test_graph_enhanced.py
backend/utils_dev/: generate_readme.py
frontend/: MODULE_README.md  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: release.sh  run-migration.sh  schema.sql  seed-workflow.py
utils_dev/: generate_readme.py
(+66 files in other folders)
