[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flow-matrx-backend"
version = "0.1.0"
description = "Flow Matrx – AI Workflow Engine Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "asyncpg==0.30.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.6.0",
    "httpx==0.28.0",
    "structlog==24.4.0",
    "alembic==1.14.0",
    "arq==0.26.0",
    "jinja2==3.1.4",
    "orjson==3.10.11",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.0",
    "ruff==0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
