[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flow-matrx-backend"
version = "0.1.0"
description = "Flow Matrx – AI Workflow Engine Backend"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.131.0",
    "uvicorn[standard]>=0.41.0",
    "asyncpg>=0.31.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "arq>=0.27.0",
    "jinja2>=3.1.4",
    "orjson>=3.11.7",
    # --- Matrx ecosystem ---
    "matrx-utils>=1.0.11",
    "matrx-orm>=3.0.8",
    "pytest>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "db"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["app", "db", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function calls in default arguments (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "db"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
